<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cuisine"
    android:background="@drawable/cuisine">

    <Button
        android:id="@+id/cuisineLedOn"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/cuisineLedOn"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/cuisineLedOff"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/cuisineLedOff"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/cuisineGasStoveOn"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/cuisineGasStoveOn"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <Button
        android:id="@+id/cuisineGasStoveOff"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/cuisineGasStoveOff"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <Button
        android:id="@+id/cuisineVentilateurOn"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/cuisineVentilateurOn"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668" />

    <Button
        android:id="@+id/cuisineVentilateurOff"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/cuisineVentilateurOff"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668" />

    <Button
        android:id="@+id/acceuil23"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:background="@drawable/i12"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

</androidx.constraintlayout.widget.ConstraintLayout>