<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".application"
    android:background="@drawable/yyyyytttt">


    <Button
        android:id="@+id/goAcceuil24"
        android:layout_width="30dp"
        android:layout_height="28dp"
        android:background="@drawable/i12"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/startgarage"
        android:layout_width="113dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/startgarage"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <Button
        android:id="@+id/startsalle"
        android:layout_width="131dp"
        android:layout_height="39dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/startsalle"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <Button
        android:id="@+id/startchambre"
        android:layout_width="144dp"
        android:layout_height="38dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/startchambre"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/startsalledebain"
        android:layout_width="113dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/startsalledebains"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <Button
        android:id="@+id/startcuisine"
        android:layout_width="113dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/startcusine"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />


</androidx.constraintlayout.widget.ConstraintLayout>