<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Garage"
    android:background="@drawable/garage">

    <Button
        android:id="@+id/garageOn"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/garageOn"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <Button
        android:id="@+id/garageOff"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/garageOff"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <Button
        android:id="@+id/garageUp"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/garageUp"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <Button
        android:id="@+id/garageDown"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/garageDown"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548" />

    <Button
        android:id="@+id/acceuil21"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:background="@drawable/i12"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />


</androidx.constraintlayout.widget.ConstraintLayout>