<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chambre"
    android:background="@drawable/bitnom">

    <Button
        android:id="@+id/ChambreOn"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/ChambreOn"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <Button
        android:id="@+id/ChambreOff"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/ChambreOff"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <Button
        android:id="@+id/ChambreClose"
        android:layout_width="82dp"
        android:layout_height="34dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/ChambreClose"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />


    <Button
        android:id="@+id/ChambreOpen"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/ChambreOpen"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <Button
        android:id="@+id/acceuil20"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:background="@drawable/i12"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />


</androidx.constraintlayout.widget.ConstraintLayout>