<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Salle"
    android:background="@drawable/sala454">


    <Button
        android:id="@+id/windowOff"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/salleGasOff"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/windowOn"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/salleOn"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/salleLedOn"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/salleOn"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <Button
        android:id="@+id/salleLedOff"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/salleOff"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <Button
        android:id="@+id/fireplaceOff"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/salleGasOff"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />


    <Button
        android:id="@+id/fireplaceOn"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:background="@drawable/btn2btnn"
        android:text="@string/salleOn"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <Button
        android:id="@+id/acceuil26"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:background="@drawable/i12"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="        "
        android:textColor="#F52A15"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fireplaceOn"
        app:layout_constraintVertical_bias="0.681" />

    <TextView
        android:id="@+id/window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Window"
        android:textSize="30dp"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fireplaceOn2"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />


</androidx.constraintlayout.widget.ConstraintLayout>